--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  base = "powerlink-app"
   command = "npm run build"
-  publish = "powerlink-app/dist"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
