--- a/package.json
+++ b/package.json
@@ -3,12 +3,35 @@
   "version": "1.0.0",
   "description": "Verbinde iPhone, iPad & MacBook – und mach KI **80% schneller**.",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "cd powerlink-app && npm run dev",
-    "build": "cd powerlink-app && npm run build",
-    "preview": "cd powerlink-app && npm run preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.18.0",
+    "jspdf": "^2.5.2",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.15.4",
+    "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
+    "vite": "^4.5.14"
+  }
 }
