--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "framer-motion": "^10.18.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.263.1",
+    "peerjs": "^1.5.5",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
+    "simple-peer": "^9.11.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
